# starterCode

./: README.md
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  main.cpp
src/components/: FrameBuffer.cpp  FrameBuffer.h  camera.h  light.h  ray.h  scene.h  shader.h  shape.h  vec3.h
utests/: CMakeLists.txt  utest_rays.cpp  utest_vectors.cpp
